--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     <div id="body">
 		<div id="chart"></div>
 		<div id="clickerWrapper">
-			<div id="clicker">Click to start</div>
+			<div id="clicker">Haga clic</div>
 			<div id="progress"></div>
 		</div>
 		<div id="buttonWrapper">
 			<div id="buttonWrapperInner">
-				<div id="reset" class="sideButton">RESET</div>
+				<div id="reset" class="sideButton">Reiniciar</div>
 			</div>
 		</div>
 
-	<div class="source"><b><i>Source: </i></b><a href="https://www.wto.org/english/tratop_e/dispu_e/dispu_e.htm" target="_blank">Current status of trade disputes, WTO (accessed on 8 November 2019)</a> -  / <b><i>Note: </i></b>it does not include actions taken outside of WTO</div>	
-	<div class="note"><b><i>Design: </i></b><a href="http://bl.ocks.org/nbremer/raw/94db779237655907b907/" target="_blank">Nadieh Bremer</a></div>
+	<div class="source"><b><i>Origen: </i></b><a href="https://www.wto.org/english/tratop_e/dispu_e/dispu_e.htm" target="_blank">Estado actual de las disputas comerciales, OMC (consultado el 8 de noviembre de 2019)</a> -  / <b><i>Observación: </i></b>No incluye acciones comerciales tomadas fuera de la OMC.</div>	
+	<div class="note"><b><i>Diseño: </i></b><a href="http://bl.ocks.org/nbremer/raw/94db779237655907b907/" target="_blank">Nadieh Bremer</a></div>
     
     <script src="chords.js"></script>
    </body>
