--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</div>
 		</div>
 
-	<div class="source"><b><i>Origen: </i></b><a href="https://www.wto.org/english/tratop_e/dispu_e/dispu_e.htm" target="_blank">Estado actual de las disputas comerciales, OMC (consultado el 8 de noviembre de 2019)</a> -  / <b><i>Observación: </i></b>No incluye acciones comerciales tomadas fuera de la OMC.</div>	
+	<div class="source"><b><i>Fuente: </i></b><a href="https://www.wto.org/english/tratop_e/dispu_e/dispu_e.htm" target="_blank">Estado actual de las diferencias comerciales, OMC (consultado el 8 de noviembre de 2019)</a> -  / <b><i>Nota: </i></b>No incluye acciones comerciales tomadas fuera de la OMC.</div>	
 	<div class="note"><b><i>Diseño: </i></b><a href="http://bl.ocks.org/nbremer/raw/94db779237655907b907/" target="_blank">Nadieh Bremer</a></div>
     
     <script src="chords.js"></script>
